fixed layout bugs in firefox, adjusted layout of reviews

--- a/src/blocks/review/review.css
+++ b/src/blocks/review/review.css
@@ -12,7 +12,7 @@
   gap: 12px;
   max-width: 380px;
   justify-content: space-between;
-  min-width: 245px;
+  min-width: 300px;
 }
 
 .review-text {
