--- a/src/blocks/reviews-container/__reviews-list/reviews-container__reviews-list.css
+++ b/src/blocks/reviews-container/__reviews-list/reviews-container__reviews-list.css
@@ -13,6 +13,7 @@
   grid-auto-flow: column;
   overflow: auto;
   padding-bottom: 5px;
+  padding-inline: var(--padding-small);
 }
 
 .reviews-container__reviews-list::-webkit-scrollbar-track
